Moved copy right div's css to index.global.css

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <div class="text-center" style="padding: 10px 0; background: #f8f9fa; position: abslute; width: 100%; bottom: 0">&#169;Resonance Path Consulting 2018</div>
+    <div class="copyRightDiv">&#169;Resonance Path Consulting 2018</div>
     <noscript>This site requires JavaScript to work. Please change to a browser that support JavaScript or turn on JavaScript.</noscript>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
