--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,8 @@
     <meta name="theme-color" content="#5d4040"/>
     <link rel="icon" href="/favicon.png" >
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" media="none" onload="if(media!='all')media='all'">
+    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet"  media="none" onload="if(media!='all')media='all'">
 
     <title>KairoScope by Resonance Path Institute</title>
   </head>
